# ASGE

./: .gitmodules  19021430_README.txt  _camera_8hpp.html  _camera_8hpp_source.html  _colours_8hpp.html  _colours_8hpp_source.html  _doxygen_8hpp_source.html  _file_i_o_8hpp.html  _file_i_o_8hpp_source.html  _font_8hpp.html  _font_8hpp_source.html  _game_8hpp.html  _game_8hpp_source.html  _game_settings_8hpp.html  _game_settings_8hpp.js  _game_settings_8hpp_source.html  _game_time_8hpp.html  _game_time_8hpp_source.html  _gamepad_8hpp.html  _gamepad_8hpp_source.html  _input_8hpp.html  _input_8hpp_source.html  _input_events_8hpp.html  _input_events_8hpp_source.html  _keys_8hpp.html  _keys_8hpp.js  _keys_8hpp_source.html  _logger_8hpp.html  _logger_8hpp_source.html  _mouse_8hpp.html  _mouse_8hpp_source.html  _non_copyable_8hpp.html  _non_copyable_8hpp_source.html  _o_g_l_game_8hpp.html  _o_g_l_game_8hpp_source.html  _pixel_buffer_8hpp.html  _pixel_buffer_8hpp_source.html  _point2_d_8hpp.html  _point2_d_8hpp_source.html  _render_target_8hpp.html  (+193 more)
examples/: CMakeLists.txt
examples/data/Tilesets/: Ground Tile.tsx  Interactables.tsx
examples/data/tilemap/: baseMapRules.tmx  baseMapRules.txt  collisionRules.tmx  collisionRules.txt  rule1.tmx  rules.txt  testTile.tmx
examples/helloasge/: ASGEGame.cpp
examples/helloasge/CustomIncludes/: FileWatch.hpp
examples/helloasge/headers/: MapLoader.hpp
examples/helloasge/src/: MapLoader.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  (+118 more)
(+1 files in other folders)
